fix demo styles so calendar doesn't overlap

--- a/examples/styles.less
+++ b/examples/styles.less
@@ -38,21 +38,11 @@ h4 {
 
 .examples {
   position: relative;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
 
 .example {
   font-size: 14px;
   flex: 1;
-
-  &,
-  & > * {
-    display: flex;
-    flex-direction: column;
-    min-height: 0;
-  }
 
   .demo,
   .rbc-calendar {
@@ -79,9 +69,8 @@ h4 > a > code  {
 
 .view-source {
   font-size: 90%;
-  float: right;
   margin-bottom: 15px;
-  margin-left: auto;
+  text-align: right;
 }
 
 .callout {
